--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About</title>
+<meta charset="UTF-8"/>
+<title>INFORMATION</title>
 <style>
-* { font-family:Arial; text-align:justify; }
-ul { list-style-position:inside; padding:10px; }
-div { border: 2px solid black; }
+* { text-align:justify; font-family:Roboto; font-size:10pt; }
 </style>
 </head>
 <body>
-<p style="text-align:center;">
-<img src="guardian.png" width="60%"/>
-<br/>
-<b>About the Guardian app</b>
-</p>
-<div>
-<ul>
-<li>A phone number can be set</li>
-<li>Calls from that number will be answered automatically, on speaker</li>
-<li>An SMS from that number with the word POSITION in the content will be replied to automatically with the geographical position (if available)</li>
-<li>If the SMS contains the word ALARM instead, it will play back an alarm sound</li>
-<li>The app will start automatically when the phone is turned on</li>
-<li>It will also try to resist the attempts to terminate it</li>
+<div style="text-align:center;"><b>INFORMATION</b><br/><br/></div>
+<div style="border: 2px solid black;">
+<ul style="list-style-position:inside; padding:10px; margin:0 0 0 0;">
+<li>Configure a phone number to call automatically when a fall is detected.</li>
+<li>Calls from that number will be answered automatically on speaker.</li>
+<li>An SMS from that number with the word POSITION in the content will be replied to automatically with the geographical position (if available).</li>
+<li>If the SMS contains the word ALARM instead, it will play back an alarm sound.</li>
+<li>The app will start automatically when the phone is turned on.</li>
+<li>It will also try to resist the attempts to terminate it.</li>
+<li>For optimal performance (to reduce the number of false alarms and the number of undetected falls) carry the device close to your waist (a trouser pocket, a belt clip, etc.).</li>
+<li>Keep your device charged at all times.</li>
 </ul>
+<div style="padding:10px">The fall detection is based upon the algorithm number 2 described in
+<i>"Comparison of low-complexity fall detection algorithms for body attached accelerometers"</i>
+authored by Maarit Kangas, Antti Konttila, Per Lindgren, Ilkka Winblad, Timo Jämsä
+published in Gait & Posture 28 (2008) by Elsevier</div>
 </div>
+<div style="text-align:center;"><img src="guardian.png" width="20%"/></div>
 </body>
 </html>
