--- a/fall-detector/src/main/assets/eula.html
+++ b/fall-detector/src/main/assets/eula.html
@@ -30,7 +30,7 @@ SOFTWARE PRODUCT LICENSE
 The MIT License (MIT)
 </p>
 <p>
-Copyright (c) 2016
+Copyright (c) 2016 altermarkive
 </p>
 <p>
 Permission is hereby granted, free of charge, to any person obtaining a copy
