--- a/fall-detector/src/main/assets/about.html
+++ b/fall-detector/src/main/assets/about.html
@@ -11,12 +11,11 @@
 <div style="text-align:center;"><b>INFORMATION</b><br/><br/></div>
 <div style="border: 2px solid black;">
 <ul style="list-style-position:inside; padding:10px; margin:0 0 0 0;">
-<li>Configure a phone number to call automatically when a fall is detected.</li>
-<li>Calls from that number will be answered automatically on speaker.</li>
+<li>Make sure to configure the emergency phone number for the app to call automatically when a fall is detected.</li>
+<li>Calls from that number will be answered automatically.</li>
 <li>An SMS from that number with the word POSITION in the content will be replied to automatically with the geographical position (if available).</li>
 <li>If the SMS contains the word ALARM instead, it will play back an alarm sound.</li>
 <li>The app will start automatically when the phone is turned on.</li>
-<li>It will also try to resist the attempts to terminate it.</li>
 <li>For optimal performance (to reduce the number of false alarms and the number of undetected falls) carry the device close to your waist (a trouser pocket, a belt clip, etc.).</li>
 <li>Keep your device charged at all times.</li>
 </ul>
