Keeping 'Guardian' as internal name

--- a/fall-detector/src/main/assets/eula.html
+++ b/fall-detector/src/main/assets/eula.html
@@ -9,7 +9,7 @@ p { text-align: justify; }
 </head>
 <body style="text-justify:justify;">
 <p>
-End-User License  Agreement for  Guardian.
+End-User License Agreement for the Fall Detector app.
 </p>
 <p>
 This End-User License Agreement (EULA) is  a legal agreement between you (either
